# we-move

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  render.yml  requirements.txt  wsgi.py
.github/workflows/: deploy-check.yml
app/: __init__.py
app/campaigns/: __init__.py
app/database/: db.py  sample-data.sql  schema.sql
app/database/queries/: __init__.py  campaigns.py  donations.py  users.py
app/donations/: __init__.py
app/templates/: base.html  index.html
app/templates/campaigns/: create.html  detail.html  edit.html  list.html
app/templates/components/: _flashMsgDisplay.html  _navbar.html  _user_dropdown.html
app/templates/donations/: create.html  detail.html  edit.html  list.html
app/templates/users/: create.html  detail.html  edit.html  list.html
app/users/: __init__.py
instance/: we-move.sqlite
tests/: conftest.py  test-data.sql  test_campaigns.py  test_donations.py  test_users.py
